--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <h1>Hello world!</h1>
 <p>This is the first file in my new Git Repo.</p>
 <p>A new line in this html file</p>
+<div><img src="meow.jpg" alt="Hello World from Space"
+style="width:100%;max-width:960px"></div>
 </body>
 </html>
