added new image

--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
 <p>A new line in this html file</p>
 <div><img src="meow.jpg" alt="Hello World from Space"
 style="width:100%;max-width:960px"></div>
+<p>This is just a line</p>
+<div><img src="hello.jpg" alt="Hello Git" 
+style="width:100%;max-width:640px"></div>
 </body>
 </html>
